<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7C7676"
    tools:context="com.ersfrontend.activities.GameActivity">

    <ImageButton
        android:id="@+id/ImageButton_PlayerRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="#00000000"
        android:contentDescription="@string/player_right"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/card_back" />

    <ImageButton
        android:id="@+id/ImageButton_PlayerLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="#00000000"
        android:contentDescription="@string/player_left"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/card_back" />

    <ImageButton
        android:id="@+id/ImageButton_PlayerTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="#00000000"
        android:contentDescription="@string/player_top"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:rotation="90"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/card_back" />

    <ImageButton
        android:id="@+id/ImageButton_PlayerBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="#00000000"
        android:contentDescription="@string/player_bottom"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:rotation="90"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/card_back" />

    <RelativeLayout
        android:id="@+id/RelativeLayout_GameScreen"
        android:layout_width="163dp"
        android:layout_height="139dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/CenterPileBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="58dp"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true"
            android:background="#00000000"
            android:contentDescription="@string/back_center"
            android:maxWidth="150dp"
            android:maxHeight="150dp"
            android:scaleType="fitXY"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintVertical_bias="0.499"
            tools:src="@drawable/card_back" />

        <ImageView
            android:id="@+id/CenterPileMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true"
            android:background="#00000000"
            android:contentDescription="@string/middle_center"
            android:maxWidth="150dp"
            android:maxHeight="150dp"
            android:scaleType="fitXY"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintVertical_bias="0.499"
            tools:src="@drawable/card_back" />

        <ImageButton
            android:id="@+id/CenterPileFront"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="58dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true"
            android:background="#00000000"
            android:contentDescription="@string/front_center"
            android:maxWidth="150dp"
            android:maxHeight="150dp"
            android:scaleType="fitXY"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintVertical_bias="0.499"
            tools:src="@drawable/card_back" />
    </RelativeLayout>

    <TextView
        android:id="@+id/GameActivityTurnView"
        android:layout_width="97dp"
        android:layout_height="78dp"
        android:text="Current turn"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageButton_PlayerLeft"
        app:layout_constraintVertical_bias="0.784" />
</androidx.constraintlayout.widget.ConstraintLayout>